--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Lint with flake8 # Новое название для ясности
+    # НОВЫЙ ШАГ ДЛЯ ОТЛАДКИ
+    - name: List installed packages
+      run: pip list
+
+    - name: Lint with flake8
       run: |
-        # Запускаем flake8 как модуль Python
-        python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    
 
     - name: Test with pytest
       run: |
